[package]
name = "tokio-multi-proxy"
version = "0.1.0"
authors = ["Ahmed Masud <ahmed.masud@saf.ai>"]
edition = "2021"
description = "A modular async proxy with TLS/mTLS and multiple transport support"
readme = "README.md"
repository = "https://github.com/ahmed-masud/tokio-multi-proxy"
homepage = "https://github.com/ahmed-masud/tokio-multi-proxy"
documentation = "https://docs.rs/tokio-multi-proxy"
license = "MIT OR Apache-2.0"
keywords = ["proxy", "tokio", "tls", "mtls", "networking"]
categories = ["network-programming", "asynchronous", "command-line-utilities"]

[features]
default = ["passthrough"]
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]
mtls = ["tls"]
passthrough = []

[dependencies]
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.2", optional = true }

[package.metadata.docs.rs]
features = ["tls", "mtls"]

